# tennis-racquet-analysis

./: README.md  pyproject.toml
docs/: business-understanding.md
docs/docs/: index.md
tennis_racquet_analysis/: data_ingestion.py  evaluation_utils.py  features.py  plots.py  plots_utils.py  preprocessing.py  preprocessing_utils.py  processing_utils.py
tennis_racquet_analysis/data_prep/: data_preparation.py
tennis_racquet_analysis/modeling/: kmeans.py  kmeans_utils.py
