[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tennis_racquet_analysis"
version = "0.0.1"
description = "Modular Data Segmentation Using PCA and K-Means in Python"
authors = [
  { name = "eagereconomist" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["tennis_racquet_analysis"]
include = ["pyproject.toml", "tennis_racquet_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["tennis_racquet_analysis"]
force-sort-within-sections = true

